Przepięcie bazy danych

--- a/SysBank/Web.config
+++ b/SysBank/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=SQL5014.Smarterasp.net;Initial Catalog=DB_9BC5E5_sysbank;User Id=DB_9BC5E5_sysbank_admin;Password=QweAsdZxc!@#;" providerName="System.Data.SqlClient" />
-  <add name="SysBankEntities" connectionString="metadata=res://*/DAL.BankDataModel.csdl|res://*/DAL.BankDataModel.ssdl|res://*/DAL.BankDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5014.Smarterasp.net;initial catalog=DB_9BC5E5_sysbank;user id=DB_9BC5E5_sysbank_admin;password=QweAsdZxc!@#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=SQL5006.Smarterasp.net;Initial Catalog=DB_9C43A5_sysbank;User Id=DB_9C43A5_sysbank_admin;Password=QweAsdZxc123!@#;" providerName="System.Data.SqlClient" />
+  <add name="SysBankEntities" connectionString="metadata=res://*/DAL.BankDataModel.csdl|res://*/DAL.BankDataModel.ssdl|res://*/DAL.BankDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5006.Smarterasp.net;initial catalog=DB_9C43A5_sysbank;user id=DB_9C43A5_sysbank_admin;password=QweAsdZxc123!@#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
